调整线的样式

--- a/src/components/uml/uml.component.scss
+++ b/src/components/uml/uml.component.scss
@@ -1,5 +1,6 @@
 .line-marker {
-  fill: #cccccc;
-  stroke: #000000;
+  fill: #fff;
+  stroke: #716e64;
   stroke-width: 1;
+  transform: translate(0.5px, 0.5px);
 }
