--- a/src/components/uml/line/line.component.html
+++ b/src/components/uml/line/line.component.html
@@ -1,1 +1,5 @@
-<svg:line xmlns:xhtml="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg" marker-end="url(#line-marker)" class="line" [attr.x1]="sourcePoint.x" [attr.y1]="sourcePoint.y" [attr.x2]="targetPoint.x" [attr.y2]="targetPoint.y"></line>
+<svg:g xmlns:xhtml="http://www.w3.org/1999/xhtml" xmlns:svg="http://www.w3.org/2000/svg">
+  <polyline marker-end="url(#line-marker)" class="line" [attr.points]="linePoints"></polyline>
+  <!-- <circle *ngFor="let pathPoint of pathPoints" [attr.cx]="pathPoint.x" [attr.cy]="pathPoint.y" r="2" stroke="black" stroke-width="2" fill="red" /> -->
+</g>
+
